# modular-synth

./: .gitignore  Makefile  README.md  a.out  regenerate_backend_makefile.py
DLL-Linking-Test/: DLL-Linking-Test.sln
DLL-Linking-Test/DLL-Linking-Test/: DLL-Linking-Test.vcxproj  dllmain.cpp
maxwell-tests/cs/: Program.cs  maxwell-tests.csproj
maxwell-tests/py/: SuperColliderUDPClient.py  notes.py  scgen.scd  server_commander.py  supercollider_server.py  supercollider_udp_client.py  test.py
maxwell-tests/py/synthdefs/: clipnoise-ar.scsyndef  impulse-kr.scsyndef  organ.scsyndef  oscillator.scsyndef  pinknoise-kr.scsyndef  sin-kr.scsyndef  sin-mix-ar.scsyndef  sine.scsyndef  sine_with_freq.scsyndef
modular-synth-backend/: CMakeLists.txt
modular-synth-backend/external_libraries/: CMakeLists.txt
modular-synth-backend/external_libraries/doctest/: CMakeLists.txt
modular-synth-backend/external_libraries/libremidi/: CMakeLists.txt
modular-synth-backend/external_libraries/oscpack_1_1_0/: CMakeLists.txt  Makefile
modular-synth-backend/external_libraries/oscpack_1_1_0/ip/win32/: UdpSocket.cpp
modular-synth-backend/include/sc-controller/: Bus.hpp  Group.hpp  MidiSynth.hpp  ServerSocket.hpp  SetterFunctor.h  SuperColliderCommander.hpp  SuperColliderController.hpp  SuperColliderPacketBuilder.hpp  Synth.hpp
modular-synth-backend/include/sc-controller/exceptions/: PushDataException.h  SCControllerException.h  UnexpectedBundleException.h  UninitializedConnectionException.h
modular-synth-backend/include/synth-api-managed/: ManagedLinkException.hpp
modular-synth-backend/include/synth-api/exception/: LinkException.hpp
modular-synth-backend/include/synth-api/ports/: InputPort.h  OutputPort.h  Port.h
modular-synth-backend/include/synth-api/ports/_model/: LogicalBus.h
modular-synth-backend/include/synth-api/section/: Section.h
modular-synth-backend/include/synth-api/section/_model/: PortManager.h
modular-synth-backend/src/: CMakeLists.txt
modular-synth-backend/src/console/: CMakeLists.txt  SCCommandLine.cpp
modular-synth-backend/src/sc-controller/: Bus.cpp  Bus.hpp  CMakeLists.txt  Group.cpp  Group.hpp  MidiSynth.cpp  Node.cpp  Node.hpp  ServerSocket.cpp  ServerSocket.hpp  SetterFunctor.cpp  SuperColliderCommander.cpp  SuperColliderCommander.hpp  SuperColliderController.cpp  SuperColliderController.hpp  SuperColliderPacketBuilder.cpp  SuperColliderPacketBuilder.hpp  Synth.cpp  Synth.hpp
modular-synth-backend/src/sc-controller/console/: CMakeLists.txt  SCCommandLine.cpp
modular-synth-backend/src/synth-api/: CMakeLists.txt  Makefile  test.cpp  test.h
modular-synth-backend/src/synth-api-managed/: CMakeLists.txt  ManagedLinkException.cpp  ManagedLinkException.hpp  SCController.cpp  SCPort.cpp  SCPort.hpp  SCSection.cpp
modular-synth-backend/src/synth-api/exception/: LinkException.hpp
modular-synth-backend/src/synth-api/ports/: InputPort.cpp  InputPort.h  LogicalBus.cpp  OutputPort.cpp  OutputPort.h  Port.cpp  Port.h
modular-synth-backend/src/synth-api/ports/_model/: LogicalBus.cpp
modular-synth-backend/src/synth-api/section/: PortManager.cpp  Section.cpp  Section.h
modular-synth-backend/src/synth-api/section/_model/: PortManager.cpp  PortManager.h
modular-synth-backend/synthdefs/: brownnoise-kr.scsyndef  decay2-ar.scsyndef  graynoise-kr.scsyndef  impulse-decay2-ar.scsyndef  math-ar.scsyndef  math-kr.scsyndef  mic-ar.scsyndef  mixer-ar.scsyndef  mixer-kr.scsyndef  organ.scsyndef  pan-ar.scsyndef  pan-kr.scsyndef  sin-ar.scsyndef  speaker-ar.scsyndef  whitenoise-kr.scsyndef
modular-synth-backend/tests/: CMakeLists.txt
modular-synth-backend/tests/logic-tests/: CMakeLists.txt  coreTests.cpp
modular-synth-backend/tests/synth-api-tests/: CMakeLists.txt  unit_tests.cpp
modular-synth-cli/: Program.cs  modular-synth-cli.csproj  scgen.scd  sctest.scd
modular-synth-frontend/: Game1.cs  Program.cs  UpgradeLog.htm  app.manifest  modular-synth-frontend - Backup.csproj  modular-synth-frontend.csproj  modular-synth-frontend.sln
modular-synth-frontend/BackendComms/: BackendComm.cs  commTestFuncs.cpp
modular-synth-frontend/BackendConnection/: API-calls.cs  BackendComm.cs
modular-synth-frontend/Content/: Content.mgcb  dial1.png-autosave.kra  neondial.png-autosave.kra  slider3.png-autosave.kra
modular-synth-frontend/Core/: Component.cs  Entity.cs  EntityManager.cs  Game1.cs  InputManager.cs  Interactable.cs  ModularSynth.cs  Module.cs  Program.cs  SectionDefManager.cs  SpriteRenderer.cs  Transform.cs
modular-synth-frontend/Scripts/: Game1.cs  InputManager.cs  Program.cs
modular-synth-frontend/SectionDef/: ExampleSecDef.json  ExampleUIDef.json  NewCombinedFile.json  PanSec.json  PanUI.json  Program.cs  TestModule.json  TestModule2.json  TestModuleSec.json  TestModuleSec2.json  TestModuleUI.json  TestModuleUI2.json  brownnoise-sec.json  brownnoise-ui.json  example-secdef.json  example-uidef.json  math.json  mic.json  midi-player-ui.json  organ-ui.json  pan-sec.json  pan-ui.json  sin-control-ui.json  sin-freqip.json  sin-sec.json  sin-ui.json  speaker-sec.json  speaker-ui.json  speakerSec.json  speakerUI.json
modular-synth-frontend/UI/: Button.cs  ButtonComponent.cs  Component.cs  Dial.cs  Grid.cs  GridTile.cs  Menu.cs  Module.cs  ModuleInteraction.cs  ModuleSpawnButton.cs  NavButton.cs  Port.cs  Slider.cs  Wire.cs
modular-synth-frontend/testpath/: DLL-Linking-Test.exp  DLL-Linking-Test.lib
